# crispro-frontend-v2

./: .cursorRules  .cursorignore  .cursorindexingignore  .cursorrules  .env  .gitignore  ACTUAL_CHAT_CONVERSATIONS_FROM_BACKUP.txt  AGENT_CONTEXT_RESTORATION.md  ALL_CHAT_HISTORY_FROM_GOOGLE_BACKUP.txt  BRITROC_MASTER.csv  BRITROC_RECOVERY_INSTRUCTIONS.md  BRITROC_REPRODUCIBILITY_PACK.md  CAPABILITIES.md  CLEANUP_SUMMARY.md  COMPLETE_RESTORATION_GUIDE.md  DEPLOYMENT.md  GITHUB_CODE_AUDIT_AND_STRATEGY.md  GITHUB_PUBLICATION_STRATEGY.md  GSE241908_QUALITATIVE_REPORT.md  GSE241908_REFINED_ANALYSIS_REPORT.md  KnowledgeGraphExample.tsx  L1_audit_result.json  MDC_FORGE_CONSOLIDATION_PLAN.md  MERGE_ALL_WORKSPACE_CHATS_AUTO.sh  MM_MISSENSE_GUIDANCE_RESULTS.md  MODULE_15_ACCESS_ADVOCACY_DEEP_DIVE.md  Makefile  PUBLICATION_INVENTORY.md  README.md  README_AI_ASSISTANT.md  README_CHOPCHOP.md  TCGA_MANUAL_OVERRIDE.md  TROUBLESHOOTING_CONVERSATION_DISPLAY.md  WHY_CONVERSATIONS_NOT_VISIBLE.md  WORKTREE_MIGRATION_SUMMARY.md  about.md  activate_all_workspaces.sh  activate_chats_for_ui.sh  activate_workspace_chats.sh  ai_research_assistant.py  (+57 more)
.github/frameworks/pubmearch-main/: .gitignore  LICENSE  README.md  pyproject.toml
.github/frameworks/pubmearch-main/pubmearch/: analyzer.py  pubmed_searcher.py  server.py
.github/frameworks/pubmearch-main/pubmed_parser-master/pubmed_parser/: pubmed_oa_parser.py
scripts/data_acquisition/mcp_servers/PDS-MCP/: .env.example  README.md  pyproject.toml
scripts/data_acquisition/mcp_servers/PDS-MCP/pds_server/: __init__.py  __main__.py  cas_client.py  (+1 more)
(+4426 files in other folders)
